# leptos-command-palette

./: .gitignore  Cargo.toml
.beads/: config.yaml  metadata.json
examples/demo/: Cargo.toml  Trunk.toml  index.html
examples/demo/src/: main.rs
src/: command.rs  component.rs  context.rs  lib.rs  shortcut.rs  theme.rs
