[package]
name = "leptos-command-palette"
version = "0.1.0"
edition = "2021"
description = "A Leptos command palette component with context-driven dynamic commands"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "KeyboardEvent",
    "HtmlInputElement",
    "HtmlElement",
    "Element",
    "Document",
    "Navigator",
    "Window",
    "EventTarget",
] }

