[package]
name = "command-palette-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos-command-palette = { path = "../.." }
leptos = { version = "0.7", features = ["csr"] }
web-sys = { version = "0.3", features = ["Window", "Location"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
